--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,5 +1,4 @@
-@import variable
-
+@import 'variable'
 *
   box-sizing: border-box
 
@@ -12,22 +11,29 @@ body
 .text-uppercase
   text-transform: uppercase
 
+.rotate180
+  transform: rotate(180deg)
+
 h1
   padding: 0
   margin: 0
   font-family: 'Ubuntu Mono', sans-seriff
-  font-size: 4.8em
+  font-size: 4.4em
   display: inline-block
 
 h2
-  font-size: 4.8em
+  font-size: 4.4em
   line-height: 1em
   font-family: 'Montserrat', serif
   font-weight: 600
-  // max-width:c 730px
-
   text-align: left
 
+h3
+  font-size: 36px
+  font-family: 'Montserrat', serif
+  font-weight: 900
+
+.rotate180
   color: $colorWhite
 
 .promokod
@@ -38,17 +44,18 @@ h2
     color: $colorBrownWhite
 
 .desc
-  font-size: 1.8em
+  font-size: 1.4em
 
 .button
   width: 200px
   padding: 16px 16px
-  font-size: 1.8em
+  font-size: 1.4em
   font-weight: 800
   border-radius: 8px
   border: none
   background-color: $colorOrange
   color: $colorBlack
+  cursor: pointer
 
 .button-descr
   display: flex
@@ -101,7 +108,7 @@ h2
   .nav-main
     display: flex
     justify-content: space-around
-    font-size: 1.8em
+    font-size: 1.4em
     font-family: 'Montserrat', serif
 
     a
@@ -212,4 +219,292 @@ h2
     .swiper-pagination-fraction
       bottom: 16px
 
+*
+  box-sizing: border-box
 
+body
+  font-family: 'Roboto', sans-serif
+  padding: 0
+  margin: 0
+  font-size: 10px
+
+.text-uppercase
+  text-transform: uppercase
+
+h1
+  padding: 0
+  margin: 0
+  font-family: 'Ubuntu Mono', sans-seriff
+  font-size: 4.4em
+  display: inline-block
+
+h2
+  font-size: 4.4em
+  line-height: 1em
+  font-family: 'Montserrat', serif
+  font-weight: 600
+  // max-width:c 730px
+
+  text-align: left
+
+  color: $colorWhite
+
+.promokod
+  color: $colorOrange
+  cursor: pointer
+
+  &:hover
+    color: $colorBrownWhite
+
+.desc
+  font-size: 1.4em
+
+.button
+  width: 200px
+  padding: 16px 16px
+  font-size: 1.4em
+  font-weight: 800
+  border-radius: 8px
+  border: none
+  background-color: $colorOrange
+  color: $colorBlack
+
+.button-descr
+  display: flex
+  flex-direction: column
+
+  small
+    font-size: 14px
+    margin-top: 20px
+
+// HEADER
+.header
+  display: flex
+  justify-content: space-between
+  align-items: center
+  background-color: $colorBrown
+  color: #fff
+  height: 10vh
+  width: 100%
+
+  &__logo
+    height: 6em
+    width: 6em
+    display: flex
+    justify-content: center
+
+  &__name-company
+    display: flex
+    flex-direction: column
+    font-family: 'Montserrat', sans-seriff
+    font-weight: 300
+    letter-spacing: 5px
+    margin: 0
+    padding: 0
+    color: #fff
+
+  &__title-company
+    color: $colorOrange
+    font-family: 'Ubuntu Mono', sans-seriff
+    font-weight: 700
+
+  &__subtitle-company
+    font-size: 1.4em
+    letter-spacing: 1.5px
+    margin-top: -8px
+
+  .title-company
+    display: flex
+    align-items: center
+
+  .nav-main
+    display: flex
+    justify-content: space-around
+    font-size: 1.4em
+    font-family: 'Montserrat', serif
+
+    a
+      color: #fff
+      text-decoration: none
+      padding: 0 15px
+      transition: all .6s
+
+      &:hover
+        color: $colorOrange
+        transition: all .2s
+
+  .nav-account
+    display: flex
+    justify-content: space-arround
+    padding-right: 16px
+
+    &__button
+      border: none
+      background: transparent
+      color: #fff
+      font-family: 'Montserrat', serif
+      font-size: 1.4em
+      display: flex
+      flex-direction: column
+      justify-content: center
+      align-items: center
+      padding: 0 12px
+
+      object
+        height: 24px
+        width: 24px
+        margin-bottom: 6px
+
+.slider-main
+  height: 90vh
+  width: 100%
+  background-color: #8f4545
+
+  &__text
+    max-width: 730px
+
+  &__img
+    display: flex
+    justify-content: center
+    align-items: center
+    margin: 0 0 0 3em
+
+  .swiper
+    &-container
+      width: 100%
+      height: 100%
+      color: $colorWhite
+
+    &-slide
+      width: 100%
+      height: 100%
+      background-color: #8f4545
+      background: linear-gradient(90deg, #5E1F0B 0%, #271612 100%)
+      padding: 2em 12em
+
+      display: flex
+      justify-content: start
+      align-items: top
+      overflow: hidden
+
+    &-button
+      &-next, &-prev
+        color: $colorOrange
+        margin-top: -4em
+        padding: 4em
+        padding-left: 3em
+        transition: all .2s
+
+        &:hover
+          background: #00000059
+
+      &-next
+        right: 0em
+        padding-right: 3em
+        padding-left: 4em
+
+      &-prev
+        left: 0
+
+      &-next::after, &-prev::after
+        content: ''
+        display: flex
+        height: 12em
+        width: 12em
+        right: 0
+
+      &-prev::after
+        transform: rotate(180deg)
+        right: none
+        left: 0
+
+    &-pagination
+      &-bullets
+        bottom: 16px
+
+      &-bullet
+        background: transparent
+        border: 1px solid colorOrange
+        height: 16px
+        width: 16px
+        margin: 0 6px !important
+        opacity: 1
+
+        &-active
+          background: $colorOrange
+
+    .swiper-pagination-fraction
+      bottom: 16px
+
+  .slide-mod
+    position: relative
+    z-index: 2
+    background-clip: no-repeat
+    background-size: cover
+
+    &::after
+      content: ''
+      display: block
+      position: absolute
+      top: 0
+      left: 0
+      height: 100%
+      width: 100%
+      background: #0000008c
+      z-index: -1
+
+    &__promokod
+      background-image: url(./../../img/slider-main/img-bg__1.jpg)
+
+    &__tournament
+      background-image: url(./../../img/slider-main/img-bg__2.jpg)
+
+      .slider-main__img
+        height: 40em
+        display: flex
+        justify-content: center
+
+        img
+          height: 100%
+
+    &__discount
+      background-image: url(./../../img/slider-main/img-bg__3.jpg)
+
+// Categories
+.categories
+  padding: 60px 100px
+
+  .categorie
+    display: grid
+    justify-items: stretch
+    align-items: stretch
+    grid-auto-flow: row
+    grid-gap: 12px
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 
+    grid-template-rows: 1fr 1fr 
+
+    &__item
+      height: 18em
+      width: 18em
+      background: #E4E4E4
+      border-radius: 30px
+      padding: 2em
+      position: relative
+      overflow: hidden
+
+      b
+        font-family: Montserrat
+        font-size: 24px
+        font-weight: 900
+
+
+      &::after
+        content: ''
+        display: block
+        position: absolute
+        bottom: 0
+        right: 0
+        height: 50%
+        width: 50%
+        background: #5f0a0a87
+        border-radius: 24px
